turtleart.lessons.turtleart.Main.HouseMany.scala.error
Source:22: error: illegal start of simple expression
			else maison(30)
                        ^